# my_engine_sandbox

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  project.json  project.local.example.json
.codex/skills/code-workflow-gate/: SKILL.md
.codex/skills/project-resource-adder/: SKILL.md
.codex/skills/project-resource-adder/agents/: openai.yaml
.codex/skills/project-resource-adder/scripts/: add_project_resource.py
.codex/skills/raw-resource-curator/: SKILL.md
.codex/skills/raw-resource-curator/agents/: openai.yaml
.codex/skills/raw-resource-curator/references/: license-notes.md
.codex/skills/raw-resource-curator/scripts/: inventory_raw.py
assets/materials/: accent.material.json  ground.material.json  hello.material.json  meadow_flower.material.json  meadow_forest.material.json  meadow_grass.material.json  meadow_light_grass.material.json  meadow_path.material.json  meadow_rock.material.json  meadow_trunk.material.json  meshy_scout.material.json  ual1_joints.material.json  ual1_main.material.json  water_sunny_assets.material.json
assets/models/: README.md
assets/prefabs/: meshy_player.prefab.json
assets/terrain/: island.terrain.json  island.world_build.json  island_small.biome_palette.json
assets/textures/: README.md
assets/ui/: main.rml  style.rcss
assets/vegetation/: island.vegetation.json
config/: audio.json  display.json  editor.json  engine.json  graphics.json  input.json
docs/: project-asset-storage.md  raw-assets-inventory.generated.md  raw-assets-inventory.md  raw-resource-storage.md
exports/: web_dev.export.json  web_release.export.json  windows_dev.export.json  windows_release.export.json
plugins/sandbox_gameplay/: CMakeLists.txt  plugin.json
plugins/sandbox_gameplay/src/: plugin_sandbox_gameplay.cpp
scenes/: character_demo.scene.json  fab_meadow_flowers_showroom.scene.json  fab_openworld_showroom.scene.json  island_terrain_demo.scene.json  main.scene.json  meadow.scene.json  ual_character_demo.scene.json  water_demo.scene.json
src/: main.cpp  sandbox_app.cpp  sandbox_app.hpp
worlds/: character_demo.world.json  fab_meadow_flowers_showroom.world.json  fab_openworld_showroom.world.json  island_terrain_demo.world.json  main.world.json  meadow.world.json  ual_character_demo.world.json  water_demo.world.json
